# ros2_node_coordinator

./: README.md  readme.txt
coppelia/: burger_framework.lua
src/navigation_pkg/navigation_pkg/: coordinator.py
src/roscoord_pkg/: QUICK_REFERENCE.md  README.md  package.xml  setup.cfg  setup.py
src/roscoord_pkg/launch/: framework.launch.py
src/roscoord_pkg/roscoord_pkg/: clock_bridge.py  coordinator.py  managed_node.py  nodo1.py  nodo2.py
src/roscoord_pkg/test/: test_copyright.py  test_flake8.py  test_pep257.py
